# screenshot

./: .gitignore  README.md  manual-finish-mask-test.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  windows-release.yml
apps/cloud/: .env.example  package.json  tsconfig.json
apps/cloud/src/: main.test.ts  main.ts  server.test.ts  server.ts
apps/desktop/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  styles.css  styles.test.ts  tauri-config.test.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_state.rs  capture.rs  capture_tests.rs  cloud_identity.rs  cloud_identity_tests.rs  frame_stability.rs  hotkey.rs  lib.rs  long_capture.rs  long_capture_cycle.rs  main.rs  output.rs  pin_window.rs  preview_windows.rs  region_observer.rs  scroll.rs  scroll_controller.rs  scroll_motion_tracker.rs  scroll_motion_tracker_tests.rs  settings.rs  static_region_detector.rs  stitcher.rs  tray.rs
apps/desktop/src-tauri/src/platform/: mod.rs  windows.rs
apps/desktop/src-tauri/src/platform/windows/: capture_exclusion.rs  scroll.rs  target.rs  window_opacity.rs
docs/: coze-workflow-setup.md  release-checklist.md
docs/superpowers/plans/: 2026-07-21-desktop-editor-foundation.md  2026-07-21-project-continuation-roadmap.md  2026-07-22-long-capture-finish-and-mask-lifecycle.md  2026-07-22-long-capture-sidecar-and-overlay-implementation.md  2026-07-22-long-capture-stitching-mask-icons.md  2026-07-22-long-capture-window-isolation-implementation.md  2026-07-22-manual-scrolling-capture.md  2026-07-22-native-long-capture-session-implementation.md  2026-07-22-wechat-4.1.11-parity-implementation.md  2026-07-22-wechat-parity-acceptance.md  2026-07-23-long-capture-session-convergence.md  2026-07-23-tray-only-startup.md
docs/superpowers/specs/: 2026-07-21-cross-platform-screenshot-tool-design.md  2026-07-21-scrolling-screenshot-design.md  2026-07-22-long-capture-finish-and-mask-lifecycle-design.md  (+7 more)
scripts/: verify-windows-startup.ps1
(+63 files in other folders)
