[package]
name = "screenshot-tool"
version = "0.1.0"
description = "A lightweight screenshot and annotation tool"
authors = ["Screenshot Tool Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
