[package]
name = "screenshot-tool"
version = "0.1.0"
description = "A lightweight screenshot and annotation tool"
authors = ["Screenshot Tool Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
png = "0.17"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
