[package]
name = "screenshot-tool"
version = "0.1.0"
description = "A lightweight screenshot and annotation tool"
authors = ["Screenshot Tool Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
png = "0.17"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
uuid = { version = "1.24.0", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
] }
clipboard-win = "5.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
